# vct-moneyball

./: .dvcignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  skills-lock.json
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
services/core/: README.md  alembic.ini  pyproject.toml
services/core/alembic/: env.py
services/core/alembic/versions/: 088791e75352_match_outcome_columns.py  b44af5ce86f4_initial_schema.py  bd877689ee75_team_country_nullable_for_clubs.py
services/core/src/vct_moneyball/: __init__.py  config.py
services/core/src/vct_moneyball/api/: __init__.py  app.py  artifacts.py  deps.py  schemas.py
services/core/src/vct_moneyball/api/routes/: evaluation.py  health.py  matrix.py  predict.py  ranking.py  team.py
services/core/src/vct_moneyball/bridge/: attribution.py  baselines.py  features.py  model.py  player_rating.py  report.py  strength.py
services/core/src/vct_moneyball/cli/: backfill_results.py  backfill_sides.py  build_ranking.py  collect.py  enc_predict.py  enc_ranking.py  eval_bridge.py  eval_winrate.py  evaluate.py  main.py  predict_match.py  serve.py  train_winrate.py
services/core/src/vct_moneyball/collect/: cache.py  client.py  parse.py  targets.py
services/core/src/vct_moneyball/common/: artifact_pointers.py  logging.py
services/core/src/vct_moneyball/data/: __init__.py
services/core/src/vct_moneyball/evaluate/: compare.py  metrics.py  standings.py
services/core/src/vct_moneyball/features/: __init__.py
services/core/src/vct_moneyball/models/: __init__.py
services/core/src/vct_moneyball/predict/: baselines.py  dataset.py  evaluate.py  features.py  labels.py  model.py  report.py  tracking.py
services/core/src/vct_moneyball/rank/: aggregate.py  artifact.py  validate.py
services/core/src/vct_moneyball/score/: events.py  player.py
services/core/src/vct_moneyball/scraping/: __init__.py
services/core/src/vct_moneyball/store/: db.py  models.py  queries.py  repositories.py
services/core/tests/: conftest.py  seed.py  test_smoke.py
services/core/tests/fixtures/vlr/: match_706327.html  team_sample.html
services/core/tests/integration/: test_api_contract.py  test_api_evaluation.py  test_api_matrix.py  test_api_predict.py  test_api_ranking.py  test_api_team.py  test_build_ranking.py  test_enc_ranking.py  test_eval_bridge.py  test_eval_winrate.py  test_evaluate.py  test_immutability.py  test_lock_deadline.py  test_provenance_repro.py  test_run_traceability.py  test_single_match_bridge_e2e.py  test_single_match_e2e.py  test_single_match_pred_e2e.py
services/core/tests/unit/: test_api_artifacts.py  test_artifact_pointers.py  test_bridge_baselines.py  test_bridge_features.py  test_collect.py  test_dataset.py  test_enc_ranking_separation.py  test_eval_metrics.py  test_events.py  test_features.py  test_labels.py  test_metrics.py  test_model.py  test_parse.py  test_player_rating.py  test_rank.py  test_score.py  test_strength.py
specs/001-enc-power-ranking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-winrate-predictor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-roster-strength-bridge/: data-model.md  plan.md  quickstart.md  (+3 more)
web/: .env.example  .gitignore  README.md  package-lock.json  package.json
(+101 files in other folders)
