[project]
name = "vct-moneyball"
version = "0.1.0"
description = "Quantitative draft intelligence for Valorant pro play."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
]

# Optional groups: declared but NOT installed by default.
# Install on demand, e.g. `uv sync --group scraping`.
[dependency-groups]
scraping = ["playwright>=1.45"]
ml = [
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.4",
]
dl = ["torch>=2.3"]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
# `dev` is installed by default (see tool.uv.default-groups).
dev = [
    "ruff>=0.5",
    "pytest>=8.2",
    "mypy>=1.10",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vct_moneyball"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
packages = ["vct_moneyball"]
mypy_path = "src"
strict = true
